added auth with jwt
