# routes/index.js
@@ -1,6 +1,7 @@
 const express = require('express');
-var router = express.Router();
+const router = express.Router();
 
+router.use('/login', require('./login'));
 router.use('/characters', require('./characters'));
 router.use('/users', require('./users'));
 router.use('/api-docs', require('./swagger'));
